--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^17.0.2"
   },
   "devDependencies": {
-    "@types/react": "^17.0.14"
+    "@types/react": "^17.0.14",
+    "typescript": "^4.3.5"
   }
 }
