--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,11 @@
       /* Visit https://aka.ms/tsconfig.json to read more about this file */
 
       /* Basic Options */
+      "baseUrl": ".",
+      "outDir": "./lib",
+      "declaration": true,
       // "incremental": true,                   /* Enable incremental compilation */
-      "target": "es2016",                       /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */
+      "target": "es2019",                       /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */
       "module": "commonjs",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */
       "jsx": "react",
       "lib": ["ESNext", "DOM"],                 /* Specify library files to be included in the compilation. */
@@ -67,5 +70,7 @@
       "skipLibCheck": true,                     /* Skip type checking of declaration files. */
       "forceConsistentCasingInFileNames": true,  /* Disallow inconsistently-cased references to the same file. */
       "resolveJsonModule": true
-    }
+    },
+    "include": ["src"],
+    "exclude": ["node_modules", "**/__tests__/*"]
   }
