--- a/tsconfig.json
+++ b/tsconfig.json
@@ -71,6 +71,6 @@
       "forceConsistentCasingInFileNames": true,  /* Disallow inconsistently-cased references to the same file. */
       "resolveJsonModule": true
     },
-    "include": ["src"],
+    "include": ["src", "index.ts"],
     "exclude": ["node_modules", "**/__tests__/*"]
   }
