--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "react-navigation-view",
   "version": "0.0.1",
   "description": "React Navigation Stack UI",
-  "main": "index.js",
+  "types":"lib/index.d.ts",
+  "main":"lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
