--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-navigation-view",
-  "version": "0.0.5",
+  "version": "0.0.9",
   "description": "React Navigation Stack UI",
   "types": "lib/index.d.ts",
   "main": "lib/index.js",
   "scripts": {
+    "prepublish": "npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
